-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.6.1
-
Fix Version/s: 0.7
-
Component/s: Java - Compiler
-
Labels:
-
Environment:
android < 2.3 (level < 9)
Android support IOException(throwable) only at level 9 (Android 2.3)
in /thrift/trunk/compiler/cpp/src/generate/t_java_generator.cc
3841 indent(out) << " } catch (org.apache.thrift.TException te)
{" << endl; 3842 indent(out) << " throw new java.io.IOException(te);" << endl; 3843 indent(out) << " }" << endl;
3856 indent(out) << " } catch (org.apache.thrift.TException te)
{" << endl; 3857 indent(out) << " throw new java.io.IOException(te);" << endl; 3858 indent(out) << " }" << endl;
this issue was introduced at revision 1063907, Wed Jan 26 22:42:02 2011 UTC
- is broken by
-
THRIFT-1038 Generated Java code for structures containing binary fields (or collections thereof) are not serializable (in the Java sense) even though they implement java.io.Serializable
-
- Closed
-